# playground

./: .gitignore  README.md  pyproject.toml  sample.env
core/: urls.py
dockerfiles/: .dockerignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml
playground/: settings.py  urls.py
